Add grammar for class diagrams

--- a/styles/syntax-tweaks.less
+++ b/styles/syntax-tweaks.less
@@ -47,4 +47,14 @@
 			font-variant-ligatures: none;
 		}
 	}
+	
+	// Class diagrams
+	.syntax--meta.syntax--class-diagram{
+		.syntax--entity.syntax--name.syntax--tag.syntax--annotation{
+			color: #7494a3;
+		}
+		.syntax--storage.syntax--type{
+			color: #cc3e44;
+		}
+	}
 }
