Add grammar for user journeys

--- a/styles/syntax-tweaks.less
+++ b/styles/syntax-tweaks.less
@@ -57,4 +57,11 @@
 			color: #cc3e44;
 		}
 	}
+	
+	// User journey
+	.syntax--meta.syntax--user-journey{
+		.syntax--storage.syntax--type{
+			color: #cc3e44;
+		}
+	}
 }
