--- a/styles/syntax-tweaks.less
+++ b/styles/syntax-tweaks.less
@@ -64,4 +64,18 @@
 			color: #cc3e44;
 		}
 	}
+	
+	// Gantt chart
+	.syntax--meta.syntax--gantt-chart{
+		.syntax--storage.syntax--type{
+			color: #cc3e44;
+			&.syntax--section{
+				color: #8dc149;
+			}
+		}
+		.syntax--entity{
+			&.syntax--task-description { color: #7494a3; }
+			&.syntax--name.syntax--tag { color: #a074c4; }
+		}
+	}
 }
