Add grammar for pie charts

--- a/styles/syntax-tweaks.less
+++ b/styles/syntax-tweaks.less
@@ -58,8 +58,9 @@
 		}
 	}
 	
-	// User journey
-	.syntax--meta.syntax--user-journey{
+	// User journey/pie chart
+	.syntax--meta.syntax--user-journey,
+	.syntax--meta.syntax--pie-chart{
 		.syntax--storage.syntax--type{
 			color: #cc3e44;
 		}
