--- a/styles/syntax-tweaks.less
+++ b/styles/syntax-tweaks.less
@@ -79,4 +79,14 @@
 			&.syntax--name.syntax--tag { color: #a074c4; }
 		}
 	}
+	
+	// Timeline
+	.syntax--meta.syntax--timeline{
+		.syntax--storage.syntax--type{
+			color: #cc3e44;
+		}
+		.syntax--entity.syntax--name.syntax--tag{
+			color: #a074c4;
+		}
+	}
 }
