Add grammar for quadrant charts

--- a/styles/syntax-tweaks.less
+++ b/styles/syntax-tweaks.less
@@ -58,9 +58,13 @@
 		}
 	}
 	
-	// User journey/pie chart
+	// User journey/quadrant/pie chart
 	.syntax--meta.syntax--user-journey,
+	.syntax--meta.syntax--quad-chart,
 	.syntax--meta.syntax--pie-chart{
+		.syntax--entity.syntax--name.syntax--tag.syntax--point{
+			color: #7494a3;
+		}
 		.syntax--storage.syntax--type{
 			color: #cc3e44;
 		}
