Add grammar for ZenUML sequence diagrams

--- a/styles/syntax-tweaks.less
+++ b/styles/syntax-tweaks.less
@@ -93,4 +93,14 @@
 			color: #a074c4;
 		}
 	}
+	
+	// ZenUML
+	.syntax--meta.syntax--zenuml{
+		.syntax--meta.syntax--message > .syntax--entity.syntax--name.syntax--tag{
+			color: #8dc149;
+		}
+		.syntax--variable.syntax--parameter{
+			color: #7494a3;
+		}
+	}
 }
