Add grammar for Sankey visualisation graphs

--- a/styles/syntax-tweaks.less
+++ b/styles/syntax-tweaks.less
@@ -84,6 +84,11 @@
 		}
 	}
 	
+	// Sankey graph
+	.syntax--meta.syntax--sankey .syntax--entity.syntax--name.syntax--tag{
+		color: #cc3e44;
+	}
+	
 	// Timeline
 	.syntax--meta.syntax--timeline{
 		.syntax--storage.syntax--type{
